Use Path.of instead of Pats.get() [move to java 11]