@@ -1,6 +1,6 @@
 package com.github.forax.pro.helper;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -10,6 +10,6 @@ class FileHelperTests {
   @Test
   void pathFilenameEndsWith() {
     var predicate = FileHelper.pathFilenameEndsWith("foo");
-    Assertions.assertTrue(predicate.test(Paths.get("bar.foo")));
+    Assertions.assertTrue(predicate.test(Path.of("bar.foo")));
   }
 }
