@@ -22,7 +22,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.PosixFilePermission;
@@ -199,16 +198,16 @@ class pro_wrapper {
     var specialBuild = specialBuild().map(build -> '-' + build).orElse("");
     var filename = "pro-" + platform() + specialBuild + ".zip";
     
-    var cachePath = Paths.get(userHome(), ".pro", "cache", release, filename);
+    var cachePath = Path.of(userHome(), ".pro", "cache", release, filename);
     if (!exists(cachePath)) {
       retry(cachePath, 3, _cachedPath -> download(release, filename, _cachedPath));
     }
     
-    var releaseTxt = Paths.get("pro", "pro-release.txt");
+    var releaseTxt = Path.of("pro", "pro-release.txt");
     if (!exists(releaseTxt) || !firstLine(releaseTxt).equals(release)) {
       deleteAllFiles(releaseTxt.getParent());
       
-      unpack(cachePath, Paths.get("."));
+      unpack(cachePath, Path.of("."));
       write(releaseTxt, List.of(release));
     }
     
@@ -220,7 +219,7 @@ class pro_wrapper {
       exit(installAndRun(args));
     } catch(IOException e) {
       System.err.println("i/o error " + e.getMessage() +
-          Optional.ofNullable(e.getStackTrace()).filter(stack -> stack.length > 0).map(stack -> " from " + stack[0]).orElse(""));
+          Optional.ofNullable(e.getStackTrace()).filter(stack -> stack.length > 0).map(stack -> " at " + stack[0]).orElse(""));
       exit(1);
     }
   }
